tests/testWorkflows/invalid_workflows/invalidAppWorkflow.playbook
{
    "name": "invalidAppWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "start": "start",
            "steps": [
                {
                    "action": "helloWorld",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "name": "1",
                    "next": [],
                    "position": {},
                    "risk": 0, 
                    "widgets": []
                },
                {
                    "action": "helloWorld",
                    "app": "Invalid",
                    "device": "hwTest",
                    "inputs": [],
                    "name": "start",
                    "next": [
                        {
                            "flags": [
                                {
                                    "action": "regMatch",
                                    "args": [
                                        {
                                            "name": "regex",
                                            "value": "(.*)"
                                        }
                                    ],
                                    "filters": [
                                        {
                                            "action": "length",
                                            "args": []
                                        }
                                    ]
                                }
                            ],
                            "name": "1",
                            "status": "Success"
                        }
                    ],
                    "position": {},
                    "risk": 0,
                    "widgets": []
                }
            ]
        }
    ]
}